--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a18c79">  <td>17/08/22 21:35:00</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BusinessLogic1.b4()[pri:0, instance:test.org.SeleniumMaven.BusinessLogic1@3ffc5af1]">&gt;&gt;b4</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@837764579</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>17/08/22 21:35:33</td>   <td>33309</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BusinessLogic1.f()[pri:0, instance:test.org.SeleniumMaven.BusinessLogic1@3ffc5af1]">f</td> 
-  <td>main@837764579</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>17/09/16 00:43:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.OrangeHRMTitle()[pri:2, instance:OrangeHrm.NewTest@3e6fa38a]">OrangeHRMTitle</td> 
+  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>17/09/16 00:43:16</td>   <td>-9959</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.VerifyErrorMessage()[pri:1, instance:OrangeHrm.NewTest@3e6fa38a]">VerifyErrorMessage</td> 
+  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>17/09/16 00:43:33</td>   <td>7439</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:OrangeHrm.NewTest@3e6fa38a]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>17/09/16 00:43:13</td>   <td>-12934</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeTest()[pri:0, instance:OrangeHrm.NewTest@3e6fa38a]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
 </table>
